Tiny layout fixes on iphone sizes

--- a/src/styles/_responsive.css
+++ b/src/styles/_responsive.css
@@ -52,12 +52,12 @@
 	}
 
 	#show-settings button {
-		height: 46px;
-		width: 46px;
+		height: 48px;
+		width: 48px;
 	}
 
 	#show-settings img {
-		width: 30px;
+		width: 32px;
 	}
 
 	aside {
